traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur())
  ^Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^Snake:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^